--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -200,4 +200,10 @@
             </div>
         </div>
     </section>
+
+    <h1> Testing of css style</h1>
+
+    <h1 style="color: blanchedalmond; background: yellow">
+        testing of the style attribute
+    </h1>
 </main>
