reorganization of pages

--- a/src/container/work.hbs
+++ b/src/container/work.hbs
@@ -22,7 +22,7 @@
                     {{#if duration.to}}
                     {{duration.to}}
                     {{else}}
-                    до тепер
+                    till now
                     {{/if}}
                 </div>
                 <br>
