--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -7,7 +7,7 @@
                 {{#each educations }}
                 <li>
                     {{name}}
-                    {{#unless isEnd}}(ще в процесі){{/unless}}
+                    {{#unless isEnd}}(in the process...){{/unless}}
                 </li>
                 {{/each}}
             </ul>
