--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -14,9 +14,9 @@
                     {{name}}
                     {{#if point includeZero=true}}({{point}}){{/if}}
                     {{#if isTop}}(top skill){{/if}}
-                    {{#unless point includeZero=true}}(не вивчаємо){{/unless}}
+                    {{#unless point includeZero=true}}(it was not studied){{/unless}}
                     {{#unless point}}
-                    {{#if point includeZero=true}}(зараз вивчаємо){{/if}}
+                    {{#if point includeZero=true}}(is studing at the moment){{/if}}
                     {{/unless}}
                 </li>
                 {{/each}}
