--- a/src/layout/shop.hbs
+++ b/src/layout/shop.hbs
@@ -14,6 +14,21 @@
 </head>
 
 <body>
+	<nav class="card mt-5 mb-5">
+		{{#with navigation}}
+		<ul class="nav">
+			{{#each links}}
+			<li class="nav-item">
+				<a class="nav-link" href={{href}}>{{text}}</a>
+			</li>
+			{{/each}}
+			<li>
+				<a class="nav-link disabled">Disabled</a>
+			</li>
+		</ul>
+		{{/with}}
+	</nav>
+
 	{{{body}}}
 
 	<footer class="row p-4">
