arranged pages for resume

--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -6,7 +6,7 @@
 <main>
     <h1>{{title}}</h1>
     <p class="py-5">
-        text in progress...
+        There are my web applications developed utilizing Bootstrap framework
     </p>
     {{#each navigation}}
     <div class="pb-3 d-grid gap-2 col-2">
