--- a/src/container/other.hbs
+++ b/src/container/other.hbs
@@ -7,7 +7,7 @@
     {{>link text="Go to other projects" noLine=true}}
     <h1>{{title}}</h1>
     <p class="py-5">
-        Here is some pages with CSS practice.
+        Here some pages with Bootsrap practice are represented.
     </p>
     {{#each navigation}}
     <div class="pb-3 d-grid gap-2 col-2">
