--- a/src/container/resume.hbs
+++ b/src/container/resume.hbs
@@ -8,7 +8,7 @@
     <br></br>
     <h1>{{title}}</h1>
     <p class="py-5">
-        Here is several expample pages for resume.
+        There are several expample pages for resume
     </p>
     {{#each navigation}}
     <div class="pb-3 d-grid gap-2 col-2">
